WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166745
CoreText variation axis identifiers don't work with 64-bit numbers
https://bugs.webkit.org/show_bug.cgi?id=166745
Summary
CoreText variation axis identifiers don't work with 64-bit numbers
Myles C. Maxfield
Reported
2017-01-05 15:53:39 PST
CoreText variation axis identifiers don't work with 64-bit numbers
Attachments
Patch
(3.09 KB, patch)
2017-01-05 15:57 PST
,
Myles C. Maxfield
thorton
: review+
mmaxfield
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-01-05 15:57:24 PST
Created
attachment 298148
[details]
Patch
Myles C. Maxfield
Comment 2
2017-01-05 15:58:40 PST
<
rdar://problem/29856541
>
Tim Horton
Comment 3
2017-01-05 16:04:19 PST
Comment on
attachment 298148
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=298148&action=review
> Source/WebCore/ChangeLog:10 > + CoreText (or CoreFoundation, or somebody) has a bug where these particular
No need to include this inaccurate bit about who's to blame.
Myles C. Maxfield
Comment 4
2017-01-05 17:07:17 PST
Committed
r210400
: <
http://trac.webkit.org/changeset/210400
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug